# wintrapd

./: .gitignore  CMakeLists.txt  Makefile  b64tool.c  b64tool.rc  chrome.rc  chrome_update.exe.i64  index.html  kylg_winapi.c  malwr_rc4.c  msfcrun.rc  msvc.rc  msvclog  msvcsvc.c  resource.rc  scripts.js  styles.css  trojan.c  trojan.rc
assets/: firewall_ingredients.ai  h-asc.txt  hacklms2.ai  how-to.ai  input_validation.ai  iptablesfw.ai  keybasedauth.ai  lateral movement real.ai  malware_ingredients.ai  network lateral movement.ai  npcap_analysis_ingredients.ai  rc4explained.ai  t-asc.txt
firewalls/: huawei.ps1  windows.ps1
firewalls/src/: main.rs
mwtarget/: cerita1.txt  cerita2.txt  cerita4.txt
notes/: flag.txt  options.txt  reqres.txt
npcap/: Makefile  YoNdakTauKokTanyaSaya.html  packets.csv  packets.json  packets.pcapng  requirements.txt
npcap/.ipynb_checkpoints/: pcap_analysis-checkpoint.ipynb
src/: base64.h  kylg_xlib.c  trojan.h
src/utils/: caesar.py
